<resources>
    <string name="app_name">MyApplication4</string>
    <string name="firstname">FirstName</string>

    <string name="lastname">LastName</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="already_registered_signin_here">Already Registered? Sign in Here</string>
    <string name="last_name">Last Name</string>
    <string name="book">Book now!</string>

    <string name="feedback_given">Give Feedback</string>

    <string name="action_search_results">Results for</string>

    <string name="action_search">Search...</string>

    <string name="activity_feedback">Feedback</string>
    <string name="message_review">Message</string>

    <string name="send">To send</string>

    <string name="default_feedback_message"> </string>
    <string name="email_review">E-mail address</string>


    <string name="selected">selected</string>
    <string name="seats">Seat</string>
    <string name="select_seat_description">Select your desired seat below</string>
    <string name="no_seats_selected">No seat selected</string>
    <string name="select_chair">Select this seat</string>
    <string name="firstname_notfilled">The first name is not entered.</string>
    <string name="lastname_notfilled">The surname is not entered</string>
    <string name="improve_feedback">These errors must be corrected.</string>
    <string name="emailadres_notfilled">The e-mail address is not entered.</string>
    <string name="message_notfilled">The message has not been entered.</string>
    <string name="ok">Ok</string>
    <string name="feedback_error_title">Error in feedback sent</string>
    <string name="cinema">CinemaNation</string>
    <string name="feedback_message_title">Receive feedback</string>
    <string name="feedback_message_content">Thanks for your feedback!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="login1">Login</string>
    <string name="mpesa">mpesa</string>
    <string name="activity_feedbackname">FeedBack</string>
    <string name="emailaddress">Email Address</string>
    <string name="message">Message</string>
    <string name="feedback">Send Feedback</string>
    <string name="image">image</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="ticket">Ticket</string>

    <string name="return_main">Go to main screen</string>
    <string name="chair">Chair</string>
    <string name="contactdata">Contact details</string>
    <string name="emailadres">cinemanation@gmail.com</string>
    <string name="postalcode">Near Odeon</string>
    <string name="route">Directions</string>
    <string name="reachability">Accessibility</string>
    <string name="email_contact">E-mail Address:</string>
    <string name="street">Nakuru Town</string>
    <string name="reachability_explaination">Our cinema can be reached by car, bicycle and the bus. Next to the cinema is a free parking space for cars and bicycles. There is also a bus stop right next to the cinema.</string>
    <string name="name_cinema">Cinema Nation</string>
    <string name="phone_contact">Phone:</string>
    <string name="contact_methods">Contact Methods</string>
    <string name="country">Kenya</string>
    <string name="counter_pay">Click Here To Pay At The Counter Option</string>
    <string name="title_activity_maps">Map</string>


</resources>
